Fix Collaboration Graph

--- a/HW5_main.ipynb
+++ b/HW5_main.ipynb
@@ -42,7 +42,8 @@
     "import matplotlib.pyplot as plt\n",
     "import ijson\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -170,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4894081it [05:59, 13622.40it/s]\n"
+      "4894081it [06:11, 13177.62it/s]\n"
      ]
     }
    ],
@@ -675,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "16733d7b",
    "metadata": {},
    "outputs": [
@@ -685,7 +686,7 @@
        "False"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "6150f2bf",
    "metadata": {},
    "outputs": [
@@ -708,7 +709,7 @@
        "[1091, 1388, 1674, 1688, 5411]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "8cb80421",
    "metadata": {},
    "outputs": [],
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "e47bca44",
    "metadata": {},
    "outputs": [
@@ -776,7 +777,7 @@
        " 'Masami Hashimoto']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "7546adcc",
    "metadata": {},
    "outputs": [
@@ -827,7 +828,7 @@
        " (2151103935, 1681491849)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1574a3f6",
    "metadata": {},
    "outputs": [],
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "9383d665",
    "metadata": {},
    "outputs": [
@@ -881,7 +882,7 @@
        " ('K. Deb', 'A. Pratap')]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,11 +904,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a4eeca79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a counter for couple\n",
+    "collaborationG_edges_counter = Counter(collaborationG_edges)\n",
+    "\n",
+    "#Create a dictionary for track couple weight\n",
+    "collaborationG_edges_weights = {}\n",
+    "\n",
+    "#Iteract edges and count from dict\n",
+    "for edge, count in collaborationG_edges_counter.items():\n",
+    "    collaborationG_edges_weights[edge] = count\n",
+    "\n",
+    "    #Add weight also for inverted edge\n",
+    "    inverted_edge = (edge[1], edge[0])\n",
+    "    collaborationG_edges_weights[inverted_edge] = count"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f305de48",
    "metadata": {},
    "source": [
-    "#### Now we calculate and plot the graphs:"
+    "#### Now we calculate the graphs:"
    ]
   },
   {
@@ -920,18 +943,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "id": "17676411",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a unweighted and directed graph\n",
-    "CG = nx.DiGraph()\n",
+    "citation_graph = nx.DiGraph()\n",
     "\n",
     "# Add nodes to the graph\n",
-    "CG.add_nodes_from(citationG_nodes)\n",
+    "citation_graph.add_nodes_from(citationG_nodes)\n",
     "# Add edges to the graph\n",
-    "CG.add_edges_from(citationG_edges)"
+    "citation_graph.add_edges_from(citationG_edges)"
    ]
   },
   {
@@ -944,18 +967,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "61fc7d97",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a weighted and undirected graph\n",
-    "CoG = nx.DiGraph()\n",
+    "collaboration_graph = nx.Graph()\n",
     "\n",
-    "# Add nodes to the graph\n",
-    "CoG.add_nodes_from(collaborationG_nodes)\n",
-    "# Add edges to the graph\n",
-    "CoG.add_edges_from(collaborationG_edges)"
+    "#Add nodes to the graph\n",
+    "collaboration_graph.add_nodes_from(collaborationG_nodes)\n",
+    "\n",
+    "#Add edges to the graph\n",
+    "for edge, weight in collaborationG_edges_weights.items():\n",
+    "    collaboration_graph.add_edge(edge[0], edge[1], weight=weight)"
    ]
   },
   {
