--- a/HW5_main.ipynb
+++ b/HW5_main.ipynb
@@ -18,7 +18,7 @@
     "| NAME and SURNAME | EMAIL |\n",
     "| --- | --- |\n",
     "| Pasquale Luca Tommasino | pl.tommasino@gmail.com | \n",
-    "| | |\n",
+    "| Paolo Zilviano | zilviano.1916518@studenti.uniroma1.it |\n",
     "| | |\n",
     "| | |"
    ]
