--- a/HW5_main.ipynb
+++ b/HW5_main.ipynb
@@ -24,7 +24,7 @@
         "| Pasquale Luca Tommasino | pl.tommasino@gmail.com |\n",
         "| Paolo Zilviano | zilviano.1916518@studenti.uniroma1.it |\n",
         "| Emmanuele De Lucia | delucia.2099678@studenti.uniroma1.it |\n",
-        "| | |"
+        "| Deniz Yilmaz | denizyilmazz@yahoo.com |\n"
       ]
     },
     {
