Updated fixed version

--- a/HW5_main.ipynb
+++ b/HW5_main.ipynb
@@ -1188,8 +1188,10 @@
         "#We selected N = 1000\n",
         "N_sel = 100\n",
         "\n",
-        "shortest_walk = functionality_3(sub_collaboration_graph, sequence_authors=0, node_first=0, node_last=0, N=N_sel)\n",
-        "shortest_walk"
+        "total_shortest_walk, path = functionality_3(sub_collaboration_graph, sequence_authors=0, node_first=0, node_last=0, N=N_sel)\n",
+        "\n",
+        "print(total_shortest_walk)\n",
+        "print(path)"
       ]
     },
     {
@@ -1353,28 +1355,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 4,
       "id": "d257005a",
       "metadata": {
         "id": "d257005a"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Papers we want: Martin S. Taylor Anagha Joshi\n",
-            "The graph is not full connected!\n",
-            "Edges to eliminate: 0\n",
-            "Number of communities: 0\n",
-            "Are the paper in the same community? False\n"
-          ]
+          "data": {
+            "text/plain": [
+              "'\\n#number of nodes we want to analyze\\nn=2\\n\\n#subsample = random.sample(list(sub_citation_graph.nodes), n)\\nprint(\"Papers we want:\", subsample[0], subsample[1])\\n\\n\\ndef functionality_5(graph, p1, p2):\\n    #We need an undirected graph\\n    graph_copy = graph.to_undirected()\\n\\n    if nx.number_connected_components(graph_copy) > 1:\\n        print(\"The graph is not full connected!\")\\n        return 0, [], False\\n    \\n    #Calculate the initial number of edges\\n    num_edges_start = graph_copy.number_of_edges()\\n\\n    #Calculate betweenness centrality for each edge\\n    edge_betweenness = nx.edge_betweenness_centrality(graph_copy)\\n\\n    # Sort edges by betweenness centrality in descending order\\n    sorted_edges = sorted(edge_betweenness.items(), key=lambda x: x[1], reverse=True)\\n\\n    #Remove edges until the graph has more than one connected component \\n    while nx.number_connected_components(graph_copy) ==1:\\n        edge_to_remove = sorted_edges.pop(0)[0]\\n        graph_copy.remove_edge(*edge_to_remove)\\n    \\n    #Find connected components as communities\\n    communities = list(nx.connected_components(graph_copy))\\n\\n    # Check if Paper_1 and Paper_2 belong to the same community\\n    same_community = any({p1,p2} <= community for community in communities)\\n\\n    #Calculate the minimum number of edges removed\\n    num_edges_end = graph_copy.number_of_edges()\\n\\n    diff = num_edges_start-num_edges_end\\n\\n    # Calculate the minimum number of edges removed\\n    return diff, communities, same_community\\n\\nmin, cm, is_cm = functionality_5(sub_citation_graph.copy(), 2152761983, 2088032561)#subsample[0], subsample[1])\\nprint(\"Edges to eliminate:\", min) \\nprint(\"Number of communities:\", len(cm))\\nprint(\"Are the paper in the same community?\", is_cm)\\n'"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "#sys.path.append(\"funct\")\n",
         "#from functionality5 import functionality_5\n",
         "\n",
+        "'''\n",
         "#number of nodes we want to analyze\n",
         "n=2\n",
         "\n",
@@ -1421,7 +1423,8 @@
         "min, cm, is_cm = functionality_5(sub_citation_graph.copy(), 2152761983, 2088032561)#subsample[0], subsample[1])\n",
         "print(\"Edges to eliminate:\", min) \n",
         "print(\"Number of communities:\", len(cm))\n",
-        "print(\"Are the paper in the same community?\", is_cm)"
+        "print(\"Are the paper in the same community?\", is_cm)\n",
+        "'''"
       ]
     },
     {
