--- a/HW5_main.ipynb
+++ b/HW5_main.ipynb
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "14daa051",
       "metadata": {
         "id": "14daa051"
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "559c93a5",
       "metadata": {
         "id": "559c93a5",
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "id": "ec97c927",
       "metadata": {
         "id": "ec97c927",
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "id": "323011fd",
       "metadata": {
         "id": "323011fd"
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "id": "b62e02db",
       "metadata": {
         "id": "b62e02db",
@@ -202,7 +202,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "4894081it [06:20, 12867.48it/s]\n"
+            "4894081it [06:03, 13463.48it/s]\n"
           ]
         }
       ],
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "id": "0bb0d247",
       "metadata": {
         "id": "0bb0d247",
@@ -366,7 +366,7 @@
               "4                                               None  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -379,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "id": "81fe7365",
       "metadata": {
         "id": "81fe7365"
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "id": "0ae167f0",
       "metadata": {
         "id": "0ae167f0",
@@ -544,7 +544,7 @@
               "4088311  [1507255258, 1580948147, 1605688901, 197584664...  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -559,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "id": "a9db47c9",
       "metadata": {
         "id": "a9db47c9"
@@ -595,12 +595,12 @@
         "id": "71a48f48"
       },
       "source": [
-        "#### - **Citation graph**: you can consider each of the papers as your nodes"
+        "##### - **Citation graph**: you can consider each of the papers as your nodes"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "id": "16733d7b",
       "metadata": {
         "id": "16733d7b",
@@ -613,7 +613,7 @@
               "False"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -626,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "id": "6150f2bf",
       "metadata": {
         "id": "6150f2bf",
@@ -639,7 +639,7 @@
               "[1091, 1388, 1674, 1688, 5411]"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -657,12 +657,12 @@
         "id": "2483b51f"
       },
       "source": [
-        "#### - **Collaboration graph**: the authors of these papers would be your nodes"
+        "##### - **Collaboration graph**: the authors of these papers would be your nodes"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "id": "277eac9d",
       "metadata": {
         "id": "277eac9d",
@@ -675,7 +675,7 @@
               "True"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -688,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "id": "8cb80421",
       "metadata": {
         "id": "8cb80421"
@@ -700,7 +700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "id": "e47bca44",
       "metadata": {
         "id": "e47bca44",
@@ -717,7 +717,7 @@
               " 'Masami Hashimoto']"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -753,12 +753,12 @@
         "id": "fd6e7795"
       },
       "source": [
-        "#### - **Citation graph**: only consider the citation relationship between these 10,000 papers and ignore the rest."
+        "##### - **Citation graph**: only consider the citation relationship between these 10,000 papers and ignore the rest."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "id": "7546adcc",
       "metadata": {
         "id": "7546adcc",
@@ -775,7 +775,7 @@
               " (2151103935, 1681491849)]"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -799,12 +799,12 @@
         "id": "c83969ee"
       },
       "source": [
-        "#### - **Collaboration graph**: only consider the collaborations between the authors of these 10,000 papers and ignore the rest."
+        "##### - **Collaboration graph**: only consider the collaborations between the authors of these 10,000 papers and ignore the rest."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "id": "1574a3f6",
       "metadata": {
         "id": "1574a3f6"
@@ -819,7 +819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "id": "9383d665",
       "metadata": {
         "id": "9383d665",
@@ -836,7 +836,7 @@
               " ('K. Deb', 'A. Pratap')]"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -859,7 +859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "id": "a4eeca79",
       "metadata": {
         "id": "a4eeca79"
@@ -888,7 +888,7 @@
         "id": "f305de48"
       },
       "source": [
-        "#### Now we calculate the graphs:"
+        "#### Now we build the graphs:"
       ]
     },
     {
@@ -898,12 +898,12 @@
         "id": "e2dd61e7"
       },
       "source": [
-        "#### - **Citation graph**:"
+        "##### - **Citation graph**:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "id": "17676411",
       "metadata": {
         "id": "17676411"
@@ -921,7 +921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "2ffa14ed",
       "metadata": {},
       "outputs": [],
@@ -938,7 +938,7 @@
         "id": "2bd0764f"
       },
       "source": [
-        "#### - **Collaboration graph**:"
+        "##### - **Collaboration graph**:"
       ]
     },
     {
@@ -963,7 +963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "0338966d",
       "metadata": {},
       "outputs": [],
@@ -995,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 24,
       "id": "6c83db1b",
       "metadata": {
         "id": "6c83db1b"
@@ -1043,7 +1043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 25,
       "id": "a4a38c24",
       "metadata": {
         "id": "a4a38c24"
@@ -1059,7 +1059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 26,
       "id": "1f9e29ce",
       "metadata": {
         "id": "1f9e29ce"
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 27,
       "id": "3a0f7430",
       "metadata": {
         "id": "3a0f7430"
@@ -1146,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 28,
       "id": "533d348a",
       "metadata": {
         "id": "533d348a"
@@ -1156,36 +1156,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The first node is: Sayaka Nagao-Sato\n",
-            "The last node is: Carlo V. Cannistraci\n",
-            "The authors sequence is: ['Martin S. Taylor', 'Rie Fujita', 'Wyeth W. Wasserman', 'Alka Saxena', 'Kang Li', 'Robert S. Young', 'Morana Vitezic', 'Hideki Tatsukawa']\n"
+            "The first node is: Benoit Marchand\n",
+            "The last node is: Eri Saijyo\n",
+            "The authors sequence is: ['Hideki Tatsukawa', 'Timo Lassmann', 'Andrew P. Gibson', 'Boris R. Jankovic', 'Naoko Suzuki', 'Christian Schmidl', 'Mariko Okada-Hatakeyama', 'Ilya E. Vorontsov']\n",
+            "9\n",
+            "['Benoit Marchand', 'Hideki Tatsukawa', 'Timo Lassmann', 'Andrew P. Gibson', 'Boris R. Jankovic', 'Naoko Suzuki', 'Christian Schmidl', 'Mariko Okada-Hatakeyama', 'Ilya E. Vorontsov', 'Eri Saijyo']\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[(0, 'Sayaka Nagao-Sato'),\n",
-              " (1, 'Martin S. Taylor'),\n",
-              " (1, 'Rie Fujita'),\n",
-              " (1, 'Wyeth W. Wasserman'),\n",
-              " (1, 'Alka Saxena'),\n",
-              " (1, 'Kang Li'),\n",
-              " (1, 'Robert S. Young'),\n",
-              " (1, 'Morana Vitezic'),\n",
-              " (1, 'Hideki Tatsukawa'),\n",
-              " (1, 'Carlo V. Cannistraci')]"
-            ]
-          },
-          "execution_count": 27,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
         "sys.path.append(\"funct\")\n",
         "from functionality3 import functionality_3\n",
         "\n",
-        "#We selected N = 1000\n",
+        "#We selected N = 100\n",
         "N_sel = 100\n",
         "\n",
         "total_shortest_walk, path = functionality_3(sub_collaboration_graph, sequence_authors=0, node_first=0, node_last=0, N=N_sel)\n",
@@ -1301,33 +1284,16 @@
       "metadata": {
         "id": "77cafd97"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "2500"
-            ]
-          },
-          "execution_count": 29,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "sys.path.append(\"funct\")\n",
         "from functionality4 import functionality_4\n",
         "\n",
-        "#Create a sub-graph from N (the top 100 authors with the highest degree)\n",
-        "degrees_for_topN = dict(sub_collaboration_graph.degree())\n",
-        "topN_auth_2 = sorted(degrees_for_topN.items(), key=lambda x:x[1], reverse=True)[:100]\n",
-        "topN_auth = [i[0] for i in topN_auth_2]\n",
-        "Nauthors_graph = sub_collaboration_graph.subgraph(topN_auth)\n",
+        "#We selected N = 100\n",
+        "N_sel = 100\n",
         "\n",
-        "n=2\n",
-        "subsample = random.sample(list(Nauthors_graph.nodes), n)\n",
-        "\n",
-        "removed_edges = functionality_4(Nauthors_graph, subsample[0], subsample[1])\n",
-        "removed_edges"
+        "#If we put 0 in 'start' and 'target' we selected two random authors\n",
+        "removed_edges = functionality_4(sub_collaboration_graph, start=0, target=0, N=N_sel)"
       ]
     },
     {
@@ -1559,22 +1525,20 @@
     },
     {
       "cell_type": "markdown",
-      "id": "1503b626",
-      "metadata": {
-        "id": "1503b626"
-      },
-      "source": [
-        "# 3. Bonus - PageRank on MapReduce"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "162046cd",
       "metadata": {
         "id": "162046cd"
       },
       "source": [
         "# 4. Command Line Question (CLQ)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "46f16f66",
+      "metadata": {},
+      "source": [
+        "It is possible to find the exercise in the appropriate `CommandLine.sh` file, and the screenshot in the `CLQ_screenshots` folder "
       ]
     },
     {
@@ -1993,16 +1957,6 @@
       "source": [
         "Since the first step has time-complexity $O(T ⋅ V)$ and the second step has $O(V' log V)$ and in this type of problem $T$ is most of the times larger than $log V$, the complexity will be $O(T ⋅ V)$."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ca6093fe",
-      "metadata": {
-        "id": "ca6093fe"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
